# STOR609_Assessment3_Group3

./: .gitattributes  .gitignore  Formel1.txt  README.md  Report.ipynb  STOR609_report_draft.ipynb  STOR609_report_draft_2.ipynb  STOR609_report_draft_3.ipynb  STOR609_report_draft_4.ipynb
Quarto Presentation/: Presentation_draft.html  Presentation_draft.qmd  Presentation_draft2.html  Presentation_draft2.qmd  Presentation_draft3.html  Presentation_draft3.pptx  Presentation_draft3.qmd  Presentation_draft4.html  Presentation_draft4.qmd  Test_Presentation.html  Test_Presentation.qmd  watermark.css
implementation/: GeneratePlots.py  PIGCompetitionSetup.py  SolvingPig.py  SolvingPigStaged.py  SolvingPiglet.py  opt_hold_n.py  optimal_vs_hold20.py  optimal_vs_optimal.py
implementation/Results/: PIGLET_results_target_2.pkl  h23_vs_optimal_100000_seed123.npy  opt_r_h20_100000_seed123.npy  opt_r_h21_100000_seed123.npy  opt_r_h22_100000_seed123.npy  opt_r_h23_100000_seed123.npy  optimal_vs_h20_100000_seed123.npy  optimal_vs_h21_100000_seed123.npy  optimal_vs_h22_100000_seed123.npy  optimal_vs_h23_100000_seed123.npy  optimal_vs_optimal.npy  optimal_vs_optimal_10.npy  optimal_vs_optimal_1000.npy  optimal_vs_optimal_10000.npy  optimal_vs_optimal_100000.npy
implementation/Results/Figures/: Reachable_states_PIG_target_100_d6.html  Reachable_states_opt_roll_PIG_target_100_d6.html  Reachable_states_staged_PIG_target_100_d6.html  Roll_boundary_PIG_target_100_d6.html  (+5 more)
package/: pyproject.toml
package/PIG/: PIG.py  __init__.py
package/value_iteration/: value_iteration.py
(+1 files in other folders)
