[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "PIG"
version = "1.0.0"
maintainers = [
  { name="Vlad Bercovici", email="v.bercovici@lancaster.ac.uk" },
  { name="Malcolm Connolly", email="m.connolly4@lancaster.ac.uk" },
  { name="Rebekah Fearnhead", email="r.fearnhead1@lancaster.ac.uk" },
  { name="Niharika Reddy Peddinenikalva", email="n.peddinenikalva@lancaster.ac.uk" },
]
authors = [
  { name="Vlad Bercovici", email="v.bercovici@lancaster.ac.uk" },
  { name="Malcolm Connolly", email="m.connolly4@lancaster.ac.uk" },
  { name="Rebekah Fearnhead", email="r.fearnhead1@lancaster.ac.uk" },
  { name="Niharika Reddy Peddinenikalva", email="n.peddinenikalva@lancaster.ac.uk"},
]
description = "Implements a value iteration algorithm to find an optimal policy for playing the games Pig and Piglet."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]
dependencies = [
    "typing", "plotly", "numpy"
]

[project.urls]
homepage = "https://github.com/turtlesoul25/STOR609_Assessment3_Group3"